<resources>
    <string name="app_name">WikiWhere</string>
    <string name="facebook_app_id">454600089161728</string>
    <string name="fb_login_protocol_scheme">fb454600089161728</string>
    <string name="MAPS_API_KEY">AIzaSyBc-5WXDKKZhmwDkkQTBTc6Knsl9-k70OM</string>

    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="remember_me">Remember me</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>


    <string name="home_navigation">Home</string>
    <string name="profile_navigation">Profile</string>
    <string name="settings_navigation">Settings</string>
    <string name="house_navigation">Houses</string>
    <string name="room_navigation">Rooms</string>
    <string name="wall_navigation">Walls</string>
    <string name="shelf_navigation">Shelves</string>
    <string name="book_navigation">Books</string>


    <string name="login">Login</string>
    <string name="log_out">Logout</string>
    <string name="register">Register</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Password</string>
    <string name="already_registered">Already registered</string>
    <string name="start_text_recognition">Start Text\nRecognition</string>
    <string name="capture_image">Capture Image</string>
    <string name="detect_text">Detect Text</string>
    <string name="load_image">Load Image</string>
    <string name="copy_text">Copy Text</string>
    <string name="info">Info</string>
    <string name="delete_house">Delete House</string>
    <string name="delete_room">Delete Room</string>
    <string name="delete_wall">Delete Wall</string>
    <string name="delete_shelf">Delete Shelf</string>
    <string name="delete_book">Delete Book</string>
    <string name="scan_books">Scan books</string>


    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="create_profile">Create Profile</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="auto">Auto</string>
    <string name="battery">Battery</string>
    <string name="biometric_authentication">Use biometric authentication</string>


    <string name="password_helper_text">Password must be at least 8 characters.</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <string name="Open">open drawer</string>
    <string name="Close">close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>