<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    tools:context=".ResetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="369dp"
                android:layout_height="104dp"
                android:fontFamily="@font/yesteryear"
                android:text="WikiWhere"
                android:textAlignment="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/resetPasswordTextView"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textSize="@dimen/title_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/info_size"
                android:text="@string/forgot_password_msg"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="?android:attr/textColorPrimary"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                app:endIconMode="clear_text"
                app:hintTextColor="?android:attr/textColorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailResetPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/resetPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/reset_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/button_size"
                app:backgroundTint="@android:color/transparent" />

            <TextView
                android:id="@+id/signInRPButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:fontFamily="@font/roboto_thinitalic"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/options_size" />

            <TextView
                android:id="@+id/signUpRPButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:fontFamily="@font/roboto_thinitalic"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/options_size" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>