<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="192dp">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:toolbarId="@+id/toolbar">

                    <ImageView
                        android:id="@+id/imageProfileImageView"
                        android:layout_width="match_parent"
                        android:layout_height="182dp"
                        android:foreground="@drawable/rounded_fg_grey"

                        android:gravity="center_vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ImageButton
                    android:id="@+id/editNameProfileButton"
                    android:layout_width="@dimen/edit_info_button_size"
                    android:layout_height="@dimen/edit_info_button_size"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackground"

                    android:scaleType="fitXY"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:src="@drawable/modify"
                    android:tint="@color/colorPrimaryDark" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/editNameProfileButton"

                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    app:startIconTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameProfileTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="@dimen/text_input_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    app:startIconTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailProfileTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="@dimen/text_input_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/changeEmailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:drawableTint="@color/colorAccent"
                android:gravity="center"
                android:text="@string/change_email"
                android:textAllCaps="false"

                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/button_size"
                app:backgroundTint="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:drawableTint="@color/colorAccent"
                android:gravity="center"
                android:text="@string/change_password"

                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/button_size"
                app:backgroundTint="@color/colorPrimaryDark" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>